hphp/hack/test/typecheck/expression_trees/instance_method_protected2.php.exp
File "instance_method_protected2.php", line 8, characters 7-15:
Expression trees do not support calling instance methods (Parsing[1002])
File "instance_method_protected2.php", line 8, characters 7-8:
Variable `$x` is undefined, or not always defined. (Naming[2050])
  File "", line 0, characters 0-0:
  Did you mean `$this` instead?
File "instance_method_protected2.php", line 8, characters 7-15:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "instance_method_protected2.php", line 14, characters 22-24:
  Definition is here
File "instance_method_protected2.php", line 8, characters 11-13:
Cannot access non-public members within expression trees. (Typing[4448])
  File "instance_method_protected2.php", line 14, characters 22-24:
  Member defined here
